# clinical-control-backend

./: .env.example  .gitignore  pyproject.toml
app/: main.py
app/api/routes/: auth.py  user.py
app/api/schemas/: auth.py  user.py
app/core/: security.py  settings.py
app/database/: mongodb.py
app/repositories/user/: __init__.py  base.py  repository.py
tests/: conftest.py  test_app.py  test_security.py
tests/e2e/: test_auth.py  test_users.py
