[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["William Rodrigues <williamrodrigues2442@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.*"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
taskipy = "^1.12.0"
blue = "^0.9.1"
ruff = "^0.0.292"
httpx = "^0.25.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 79
exclude = [".venv"]

[tool.isort]
profile = "black"
line_length = 79

[tool.pytest.ini_options]
pythonpath = "."


[tool.taskipy.tasks]
lint = "ruff . && blue --check . --diff"
format = "blue . && isort ."
run = "uvicorn app.main:app --reload"
pre_test = "task lint"
test = "pytest -s -x --cov=app -vv"
post_test = "coverage html"
